--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         <div class="block pb-60">
             <h3>What is your interest in IT? When did your interest in IT start?</h3>
             <div class="content">
-                <p>I am interested in web page editing of information technology because I think web page editing can improve my logical thinking ability. When I found a teaching video of web page editing on the Internet by chance, I became interested in IT.</p>
+                <p>I am interested in web page editing of information technology because I think web page editing can improve my logical thinking ability. And this is a basic project of the IT industry, and the application scope in the industry is wide, as small as to build a personal website for oneself, as big as the government, large companies and other institutions to make their commercial and office use of the website are inseparable from web page production. When I found a teaching video of web page editing on the Internet by chance, I became interested in IT.</p>
             </div>
         </div>
 
@@ -72,7 +72,7 @@
             <h3>Was there a particular event or person that sparked your interest? Outline your IT experience.</h3>
             <div class="content">
                 <ul class="menu">
-                    <p> My interest in IT comes from some teaching videos I occasionally saw on the Internet and the application of IT to life. I have taken some basic courses in HTML and PHP at RMIT.</p>
+                    <p>My interest in IT comes from some teaching videos I occasionally saw on the Internet and the application of IT to life. I think almost all industries in modern society have become inseparable from IT because now is the information age. Mastering some IT skills will enable me to make contributions to society and improve my ability at the same time. I have taken some basic courses in HTML and PHP at RMIT.</p>
                 </ul>
             </div>
         </div>
@@ -80,7 +80,7 @@
         <div class="block pb-60">
             <h3>Why did you choose to come to RMIT? </h3>
             <div class="content">
-                <p>Because RMIT is a very good university.</p>
+                <p>When I was in high school, I planned to study in RMIT, because I heard that RMIT is a very famous school, which is in the front of Australian universities in academic and other aspects.</p>
 
 		 </div>
     </div>
@@ -89,7 +89,7 @@
 		 <div class="block pb-60">
             <h3>What do you expect to learn during your studies? </h3>
             <div class="content">
-                <p>I hope to learn more about IT during my study, because IT can be applied in more and more fields and occupations in modern society. </p>
+                <p>I hope to learn more about IT during my study, and I can find some experience in how IT knowledge can be applied to other industries. Because IT can be applied in more and more fields and occupations in modern society. </p>
 
 		 </div>
     </div>
