--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
                        
                         <img src="images/lake.jpg" width="800" height="600" class="w-100">
-                        <p>In my free time I like to go outing with my friends.</p>
+                        <p>In my free time I like to go outing with my friends.I like to go out for a walk and see the scenery. Nowadays people's life pace is too fast. Watching the scenery can make me feel the inner rest, which can give me a comfortable feeling.</p>
 
             </div>
            </div>   
@@ -52,7 +52,7 @@
 						<div class="block pb-60">
                         <div class="content">
                         <img src="images/cooking.jpg" width="800" height="600" class="w-100">
-						<p>I also enjoy cooking, I like to cook different kinds of food.</p>
+						<p>I also enjoy cooking, I like to cook different kinds of food. Although my cooking is not good, every time I do a good job of the food I want, I will get a sense of achievement, and I believe my cooking will make progress slowly.</p>
                   </div>
                 </div>
 
